--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/m-labib-alfaraby-a514b9202/"><b>LinkedIn</b></a>
     <a class="footer-link" href="https://www.instagram.com/labibalfaraby/">Instagram</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://labibs30.github.io/web-bio/">Website</a>
     <p class="copyright">© 2022 labib</p>
     </div>
       
